--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -83,7 +83,7 @@ html[data-theme="dark"] {
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #3beb81;
-  --global-hover-color: #39A78E;
+  --global-hover-color: #39a78e;
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
